# app/Models/ApprovalStage.php
@@ -8,4 +8,7 @@ use Illuminate\Database\Eloquent\Model;
 class ApprovalStage extends Model
 {
     use HasFactory;
+    protected $fillable = [
+        'approver_id'
+    ];
 }
